[package]
name = "mts-web"
version = "0.1.0"
authors = ["Jomer <Jomer.Dev@posteo.de>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
futures-signals = "0.3.20"
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = "1.0.126"
lazy_static = "1.4.0"
gloo-timers = "0.2.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.51"
features = [
"console",
    "AbortController",
    "AbortSignal",
    "Headers",
    "Response",
    "RequestInit",
    "Window",
    "AnimationEvent"
]