[package]
name = "mts-web"
version = "0.1.0"
authors = ["Jomer <Jomer.Dev@posteo.de>"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
dominator = "0.5.33"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
futures-signals = "0.3.32"
serde_json = "1.0.102"
serde_derive = "1.0.171"
serde = "1.0.171"
lazy_static = "1.4.0"
gloo-timers = "0.2.6"
anyhow = "1.0.71"
gloo-console = "0.2.3"
uuid = { version = "1.4.0", features = ["serde", "v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.64"
features = [
"console",
    "AbortController",
    "AbortSignal",
    "Headers",
    "Response",
    "RequestInit",
    "Window",
    "AnimationEvent",
    "HtmlElement",
    "Element",
    "DomRect",
    "HtmlCollection",
    "Event",
    "EventTarget",
]
